# pal-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md  benchmark.yaml  models.example.yaml
configs/evidence_chain_dossier/: erb_recall_only.yaml  llm_core.yaml  llm_erb_batch_core.yaml  llm_erb_batch_smoke.yaml  llm_erb_core.yaml  llm_erb_smoke.yaml  llm_evidence_readout_core.yaml  llm_evidence_readout_smoke.yaml  llm_global_readout.yaml  llm_hard_block_adaptive_core.yaml  llm_hard_block_adaptive_frozen_aug_bea_core.yaml  llm_hard_block_adaptive_frozen_aug_core.yaml  llm_hard_block_adaptive_frozen_aug_odm_core.yaml  llm_hard_block_adaptive_frozen_aug_odm_core_retry14.yaml  llm_hard_block_adaptive_frozen_aug_odm_evidence_core.yaml  llm_hard_block_adaptive_owner_census_core.yaml  llm_hard_block_adaptive_repair1_core.yaml  llm_hard_block_core.yaml  llm_hard_block_only_smoke.yaml  llm_hard_block_smoke.yaml  llm_joint_core.yaml  llm_joint_smoke.yaml  llm_smoke.yaml
data/sample/: README.md
prompts/benchmark/: text_entities.txt
results/: README.md
results/manifests/: final_result_manifest.json
results/paper_tables/: full50_official_report.md
scripts/: audit_release.py
scripts/baselines/: make_caption_swap_users.py  profile_baseline_common.py  run_adapted_lifelog_profile_batch.py  run_generic_tool_agent_budget7_profile_batch.py  run_generic_tool_agent_profile_batch.py  run_long_context_iso_compute_profile_batch.py  run_long_context_profile_batch.py  run_multimodal_rag_profile_batch.py  (+1 more)
tests/: test_bootstrap_compare.py  test_formal_judge.py
(+68 files in other folders)
